--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,17 @@ body{
 }
 
 h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
-	color: #3a3a3a;
 	font-weight: 300;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 2.8em;
+}
+
+h1,.h1{
+	color: #3a3a3a;
+}
+
+h2,h3,h4,h5,h6,.h2,.h3,.h4,.h5,.h6{
+	color: #222;
 }
 
 p{
